// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions-panel-item Renders \`actions-panel-item\` with custom props as dropdown item correctly 1`] = `
<span>
  <div
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link theme--light"
    >
      <div
        class="v-list__tile__title"
      >
        <i
          aria-hidden="true"
          class="v-icon v-icon--left material-icons theme--light customDropdownIconColor--text"
          style="font-size: 16px;"
        >
          customDropdownIcon
        </i>
        <span
          class="body-1 pl-2"
        >
          Custom dropdown title
        </span>
      </div>
    </a>
  </div>
</span>
`;

exports[`actions-panel-item Renders \`actions-panel-item\` with custom props as dropdown item correctly 2 1`] = `
<span>
  <div
    class="v-list--disabled"
    disabled="disabled"
    role="listitem"
  >
    <a
      class="v-list__tile v-list__tile--link v-list__tile--disabled theme--light"
      disabled="disabled"
    >
      <div
        class="v-list__tile__title"
      >
        <i
          aria-hidden="true"
          class="v-icon v-icon--disabled v-icon--left material-icons theme--light disabledCustomDropdownIconColor--text"
          style="font-size: 16px;"
        >
          disabledCustomDropdownIcon
        </i>
        <span
          class="body-1 pl-2"
        >
          Disabled custom dropdown title
        </span>
      </div>
    </a>
  </div>
</span>
`;

exports[`actions-panel-item Renders \`actions-panel-item\` with default and required props correctly 1`] = `
<span>
  <c-action-btn-stub
    color=""
    icon="customIcon"
    tooltip="Custom title"
  />
</span>
`;

exports[`actions-panel-item Renders disabled \`actions-panel-item\` with default and required props correctly 1`] = `
<span>
  <c-action-btn-stub
    color="disabledCustomIconColor"
    disabled="true"
    icon="disabledCustomIcon"
    tooltip="Disabled custom title"
  />
</span>
`;
